BUG: (2/13/08, DN) ELIB reader doesn't read Float numbers from old libraries. FIX: In ELIB.getInVar read floats into Double objects.
git-svn-id: https://svn.java.net/svn/electric~svn/trunk@7250 b64ed6c1-75a8-e629-b1da-d0dae74a743a